# RegionFileLib

./: .gitignore  BasicConfiguration.props  LibraryDependencies.props  README.md  RegionFileLib.sln  TODO.txt
Dependencies/lz4/: CMakeLists.txt  lz4.vcxproj  lz4.vcxproj.filters
Dependencies/nbt_cpp/: Compiler_Define.h  MUTF8_Tool.hpp  NBT_All.hpp  NBT_Array.hpp  NBT_Compound.hpp  NBT_Endian.hpp  NBT_Hash.hpp  NBT_Helper.hpp  NBT_IO.hpp  NBT_List.hpp  NBT_Node.hpp  NBT_Node_View.hpp  NBT_Print.hpp  NBT_Reader.hpp  NBT_Scanner.hpp  NBT_String.hpp  NBT_TAG.hpp  NBT_Type.hpp  NBT_Visitor.hpp  NBT_Writer.hpp  vcpkg_config.h
Dependencies/util/: CPP_Helper.h  CodeTimer.hpp  MyAssert.hpp  Windows_ANSI.hpp
Dependencies/xxhash/: CMakeLists.txt  xxhash.vcxproj  xxhash.vcxproj.filters
Dependencies/zlib/: CMakeLists.txt  zlib.vcxproj  zlib.vcxproj.filters
RegionFileLib/: RegionFileLib.cpp  RegionFileLib.hpp  RegionFileLib.vcxproj  RegionFileLib.vcxproj.filters
